--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
-        "illuminate/support": "^8.0"
+        "illuminate/support": "^6.0 || ^7.0 || ^8.0|^9.0"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
@@ -29,12 +29,12 @@
     },
     "autoload": {
         "psr-4": {
-            "LPMatrix\\Fluidcoins\\": "src"
+            "LPMatrix\\FluidCoins\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "LPMatrix\\Fluidcoins\\Tests\\": "tests"
+            "LPMatrix\\FluidCoins\\Tests\\": "tests"
         }
     },
     "scripts": {
@@ -48,10 +48,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "LPMatrix\\Fluidcoins\\FluidcoinsServiceProvider"
+                "LPMatrix\\FluidCoins\\FluidcoinsServiceProvider"
             ],
             "aliases": {
-                "Fluidcoins": "LPMatrix\\Fluidcoins\\FluidcoinsFacade"
+                "FluidCoins": "LPMatrix\\FluidCoins\\FluidcoinsFacade"
             }
         }
     }
